# api-driver-fri

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  README.md  license.txt
include/api_driver_fri/: Doxygen.h  FastResearchInterface.h  LWRBaseControllerInterface.h  LWRJointTorqueController.h  OSAbstraction.h  TypeIRML.h  UDPSocket.h
share/: .gitignore  FRIGenericControl.src
share/cmake/: api-driver-fri_PID_Version.cmake
share/doxygen/: Doxyfile.in  main_page.md
share/resources/: 471-FRI-Driver-5ms.init  472-FRI-Driver-2ms.init  472-FRI-Driver-5ms.init
share/resources/fri_configurations/: 471-FRI-Driver-1ms.init  471-FRI-Driver-2ms.init  472-FRI-Driver-1ms.init
src/: CMakeLists.txt
src/api_driver_fri/: FastResearchInterface.cpp  GetCompleteRobotStateAndInformation.cpp  GetRobotStatusData.cpp  KRCCommunicationThreadMain.cpp  ReadInitFile.cpp  SetControlScheme.cpp  StopRobot.cpp  UDPSocket.cpp  WaitForTicks.cpp
